<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_cpp</name>
  <version>0.0.0</version>
  <description>Simple PX4 offboard example with ROS2 and C++</description>
  <maintainer email="claudio9fritsche@hotmail.com">claudio</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
